# basic-solar-statistics

./: .gitignore  CLAUDE.md  README.md  auth_drive.sh  manifest.json  pyproject.toml
.devcontainer/: devcontainer.json
.github/workflows/: run-monthly.yml
data/: ahj_cancellation_rates.csv  ahj_distribution_permitting_timelines_pv.csv  ahj_inspection_timelines_pv.csv  ahj_median_permitting_timelines_by_tech.csv  solar_jobs.csv  solar_potential.csv  solartrace_fees.csv  state_cancellation_rates.csv  state_distribution_permitting_timelines_pv.csv  state_inspection_timeline_pv.csv  state_inspection_timelines_pv.csv  state_median_permitting_timelines_by_tech.csv  state_name_abbr.csv  utility_interconnection_fees.csv
data/bill_savings_csvs/: run_all_states_net_savings_add_itc_baseline_2026_state_bill_savings.csv  run_all_states_net_savings_adjust_loan_params_state_bill_savings.csv
github/workflows/: run-monthly.yml
modules/: average_electricity_prices.py  median_interconnection_timelines.py  median_solar_costs.py  process_solartrace_timelines.py  pull_solar_count_and_capacity.py  solar_bill_savings_update.py  solar_eligible_households.py  solar_technical_potential.py
modules/inactive/: pull_electricity_prices_bills_eia.py  pull_solar_installations_and_capacity.py  solar_bill_savings.py
notebooks/: basic_statistics.ipynb  compile_state_stats.ipynb  export_bill_savings.ipynb  pipeline.ipynb  solartrace_exploration.ipynb
src/: average_electricity_prices.py  bill_savings_export.py  drive_uploader.py  manifest.py  median_interconnection_timelines.py  median_permit_fees.py  median_solar_costs.py  pull_solar_count_and_capacity.py  solar_bill_savings.py  solar_technical_potential.py
